# ROS2_Autonomous_Vehicle

./: .gitignore  README.md  dos2unix.sh  how to set up devcontainers.txt  how to set up usb devices.txt  open_docker_container.sh  test.py  useful_commands  waypoints.json
.devcontainer/: Dockerfile  build_container.sh  devcontainer.json
Michael_DEV/: tutorial_notes.txt
Michael_DEV/sam_bot_description/: package.xml
Michael_DEV/sam_bot_description/config/: nav2_params.yaml
Michael_DEV/sam_bot_description/launch/: display.launch.py
Michael_DEV/sam_bot_description/world/: world2
arduino/test_pwm_read/: test_pwm_read.ino
arduino/test_pwm_read/arduino_main/: arduino_main.ino
complete_launch_files/: velodyne_launch.xml
controller_library/: README.md  controller_launch.xml
dev_ws/src/two_wheeled_robot/: package.xml  setup.cfg  setup.py
dokalman_library/: CMakeLists.txt  README.md  frames.gv  package.xml  source.sh
dokalman_library/config/: joint_names_DokalmanURDF.yaml  nav2_params.yaml  view_robot.rviz  visualize_urdf.rviz
dokalman_library/description/: camera.xacro  robot.urdf.xacro  robot_core.xacro
dokalman_library/launch/: display.launch.py  gazebo.launch.py  joint_state_pub_gui.launch.py  robot_state_pub.launch.py  rviz.launch.py  teleop_controller.launch.py  visualize_urdf.launch.py
dokalman_library/meshes/: BackGPS.STL  CasterLink.STL  FrontRightWheelLink.STL
dokalman_library/model/: pothole_2ft_diameter.dae
dokalman_library/robot_frame_stuff/: frames.gv
dokalman_library/ros2_bags/: testing.ipynb
dokalman_library/src/: CMakeLists.txt
dokalman_library/src/dokalman/: CMakeLists.txt  package.xml
dokalman_library/src/dokalman_controller/: CMakeLists.txt  package.xml
dokalman_library/src/dokalman_library/: CMakeLists.txt  nav2_bringup.txt  package.xml
dokalman_library/src/dokalman_library/config/: map_1707684099.pgm  map_1707684099.yaml  mapper_params_online_async.yaml  nav2_params.yaml  view_robot_slam.rviz
dokalman_library/src/dokalman_library/launch/: gazebo.launch.py  nav2_bringup.launch.py  rviz.launch.py  slam.launch.py
dokalman_library/src/dokalman_library/meshes/: BCam.STL  FrontGPS.STL
dokalman_library/src/dokalman_library/robot_frame_stuff/: frames.gv  get_frames.sh
dokalman_library/src/dokalman_library/src/: gazebo_publish_robot_heading.cpp
dokalman_library/src/dokalman_library/urdf/: DokalmanCore.xacro  DokalmanExtras.xacro  DokalmanURDF.urdf.xacro  gazebo_control.xacro  imu.xacro  lidar.xacro
dokalman_library/src/dokalman_library/worlds/: obstacles.world
dokalman_library/src/dokalman_library/worlds/models/checkerboard/materials/scripts/: checkerboard.material
dokalman_library/src/dokalman_library/worlds/models/line_det_course/: model.config
dokalman_library/src/launch/: gazebo.launch.py
dokalman_library/temp/: display.launch  gazebo.launch
dokalman_library/urdf/: DokalmanCore.xacro  DokalmanExtras.xacro  DokalmanURDF.csv  DokalmanURDF.urdf  DokalmanURDF.urdf.xacro  camera.xacro  gazebo_control.xacro  gps.xacro  imu.xacro  lidar.xacro
dokalman_library/worlds/: line_det_course.world  obstacles.world  readme.txt
gps_library/: README.md  source.sh
imu_library/: README.md  source.sh
imu_library/sparkfun_imu_node/: package.xml  setup.cfg  setup.py
joystick_control/: create_package.sh
led_library/: LED_Test_Code.ino
led_library/LED_Test_Code/: LED_Test_Code.ino
motor_library/: .gitignore  README.md  build_and_source.sh  source.sh
motor_library/arduino_code/: arduino_main.ino
motor_library/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
motor_library/install/motor_control/share/motor_control/: package.sh  package.xml
motor_library/log/: latest_build
motor_library/python_code/: main.py  serial_sender.py  serial_utils.py  temp.py
nav2_library/nav2_dokalman/: package.xml  setup.cfg  setup.py
nav_library/: source.sh
nav_library/urdf/: MK2ASSMBurdf.SLDASM.urdf
navigation_library/basic_navigation/: package.xml  setup.py  source.sh
robot_library/: create_package.sh  notes.txt  useful_commands.txt
robot_library/scripts/: free_space_map_large.yaml  generate_map.py
roslaunch_files/: README.md  build_all.sh  build_and_source_all.sh  motor_control_launch.xml
test_pointcloud_library/: README.md  source.sh
test_pointcloud_library/pointcloud_library/: package.xml  setup.cfg  setup.py
tutorials/: docker display not set.txt  how to set up devcontainers.txt  launch turtlebot sim with slam and nav.txt
usb_cam_library/: source.sh
velodyne_library/: README.md  rviz2_parameters.rviz  start_rviz2.sh  start_velodyne.sh
vision_library/: README.md  source.sh  spawning_in_camera.txt
vision_library/colin_test/: source.sh
vision_library/opencv_cpp/: main  main.cpp  opencv_help.md
vision_library/src/cpp_image_processing/: CMakeLists.txt  package.xml  testing_camera.py
vision_library/src/cpp_image_processing/Jupyter Notebooks/: camera_calibrate.ipynb  camera_calibrate.py  detect_camera.ipynb  image_testing.ipynb  save_vid_frames.ipynb
vision_library/src/cpp_image_processing/TestPy/: camera_calibrate.py  hsv_filtering.py  open_cameras.py
vision_library/src/cpp_image_processing/calibration_data/: calibrate_hsv.txt  front_img_processeddebug.txt  front_test_cal.txt  left_img_processeddebug.txt  left_test_cal.txt  right_img_processeddebug.txt  right_test_cal.txt  test.txt  test2.txt  test_cal.txt  video2.txt
vision_library/src/cpp_image_processing/launch/: calibrate_camera.launch.py  calibrate_hsv_cam.launch.py  launch_camera_calibration.py  launch_live_stack.py  launch_single_stack.launch.py  launch_single_stack.py  launch_static_stack.py  launch_vision_stack.xml  real_camera_drivers.launch.py  usb_cam_test.py
vision_library/src/cpp_image_processing/src/: .calibrate_camera_feed.cpp.swp  calibrate_camera_feed.cpp  calibrate_camera_feed1.cpp  image_processing.cpp  image_publisher.cpp  image_skewing.cpp  image_thresholding.cpp  image_to_pointcloud.cpp  line_thresholding.cpp  live_image_publisher.cpp  static_image_publisher.cpp  video_node.cpp  view_feed.cpp
(+130 files in other folders)
