<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motor_control</name>
  <version>0.0.1</version>
  <description>
    <p>This is the library used to communicate to the Arduino.</p>
    <p>Subscribes to:</p>
    <p>drive_speed</p>
    <p>turn_speed</p>
  </description>
  <maintainer email="andrew@todo.todo">andrew</maintainer>
  <license>
    There is no lisence for this package at this time.
    This is free to use by anyone.
  </license>
  <exec_depend>rclpy</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
